[package]
name = "shooting"
version = "0.1.0"
authors = ["sushiyoshi"]
edition = "2018"

[dependencies]
piston_window = "0.103.0"
piston = "0.49.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.27.0"
piston2d-sprite = "0.57.0"
image = "0.22.0"
piston2d-drag_controller = "0.25.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.3.0"
piston2d-graphics = "0.34.0"
piston2d-opengl_graphics = "0.68.0"
piston2d-touch_visualizer = "0.23.0"


[dependencies.pistoncore-glutin_window]
version = "0.63.0"
optional = true

[features]
default = ["include_glutin"]
include_glutin = ["pistoncore-glutin_window"]